--- a/Boggle/MainWindow.xaml
+++ b/Boggle/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -23,35 +24,42 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.ColumnSpan="6">Boggle</TextBlock>
-        <TextBlock Grid.Row="1" Grid.Column="1">A</TextBlock>
+        
         <TextBlock Grid.Row="1" Grid.Column="2">A</TextBlock>
         <TextBlock Grid.Row="1" Grid.Column="3">A</TextBlock>
         <TextBlock Grid.Row="1" Grid.Column="4">A</TextBlock>
         <TextBlock Grid.Row="1" Grid.Column="5">A</TextBlock>
+        <TextBlock Grid.Row="1" Grid.Column="6">A</TextBlock>
         
-        <TextBlock Grid.Row="2" Grid.Column="1">A</TextBlock>
         <TextBlock Grid.Row="2" Grid.Column="2">A</TextBlock>
         <TextBlock Grid.Row="2" Grid.Column="3">A</TextBlock>
         <TextBlock Grid.Row="2" Grid.Column="4">A</TextBlock>
         <TextBlock Grid.Row="2" Grid.Column="5">A</TextBlock>
+        <TextBlock Grid.Row="2" Grid.Column="6">A</TextBlock>
         
-        <TextBlock Grid.Row="3" Grid.Column="1">A</TextBlock>
         <TextBlock Grid.Row="3" Grid.Column="2">A</TextBlock>
         <TextBlock Grid.Row="3" Grid.Column="3">A</TextBlock>
         <TextBlock Grid.Row="3" Grid.Column="4">A</TextBlock>
         <TextBlock Grid.Row="3" Grid.Column="5">A</TextBlock>
+        <TextBlock Grid.Row="3" Grid.Column="6">A</TextBlock>
         
-        <TextBlock Grid.Row="4" Grid.Column="1">A</TextBlock>
         <TextBlock Grid.Row="4" Grid.Column="2">A</TextBlock>
         <TextBlock Grid.Row="4" Grid.Column="3">A</TextBlock>
         <TextBlock Grid.Row="4" Grid.Column="4">A</TextBlock>
         <TextBlock Grid.Row="4" Grid.Column="5">A</TextBlock>
+        <TextBlock Grid.Row="4" Grid.Column="6">A</TextBlock>
         
-        <TextBlock Grid.Row="5" Grid.Column="1">A</TextBlock>
         <TextBlock Grid.Row="5" Grid.Column="2">A</TextBlock>
         <TextBlock Grid.Row="5" Grid.Column="3">A</TextBlock>
         <TextBlock Grid.Row="5" Grid.Column="4">A</TextBlock>
         <TextBlock Grid.Row="5" Grid.Column="5">A</TextBlock>
+        <TextBlock Grid.Row="5" Grid.Column="6">A</TextBlock>
+        
+        <TextBlock Grid.ColumnSpan="4">Boggle</TextBlock>
+        <Button >StartGame</Button>
+        <TextBlock Grid.Column="4" Grid.ColumnSpan="3">Score</TextBlock>
+        <TextBlock Grid.Row="1">CurrentWord</TextBlock>
+        <Button Grid.Row="1" Grid.Column="1">Submit</Button>
+        <ListView Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="2">WordList</ListView>
     </Grid>
 </Window>
